--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.5.0",
         "core-js": "^3.0.0",
+        "jquery-ui": "^1.12.1",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.38.0",
         "stimulus": "^2.0.0",
@@ -21,6 +22,6 @@
         "bootstrap": "^5.1.0",
         "datatables.net": "^1.10.25",
         "datatables.net-bs4": "^3.2.2",
-        "sass-loader": "^10.1.0"
+        "sass-loader": "^10.0.0"
     }
 }
